      `[merge]` after the date.  Scripts which parse the output of this
      command may need to be adjusted.
      (Neil Martinsen-Burrell)

  NEW FEATURES:

    * ``bzr reconfigure`` now supports --with-trees and --with-no-trees
      options to change the default tree-creation policy of shared
      repositories.  (Matthew Fuller, Marius Kruger, #145033)

    * Filtered views provide a mask over the tree so that users can focus
      on a subset of a tree when doing their work. See ``Filtered views``
      in chapter 7 of the User Guide and ``bzr help view`` for details.
      (Ian Clatworthy)

    * The ``-Dmemory`` flag now gives memory information on Windows.
      (John Arbash Meinel)

    * New command ``bzr launchpad-open`` opens a Launchpad web page for that
      branch in your web browser, as long as the branch is on Launchpad at all.
      (Jonathan Lange)

  IMPROVEMENTS:

    * ``bzr branch`` now has a ``--no-tree`` option which turns off the
      generation of a working tree in the new branch.
      (Daniel Watkins, John Klinger, #273993)

    * Bazaar will now point out ``bzr+ssh://`` to the user when they 
      use ssh://. (Jelmer Vernooij, #330535)

    * ``bzr -v info`` now omits the number of committers branch statistic,
      making it many times faster for large projects. To include that
      statistic in the output, use ``bzr -vv info``.
      (Ian Clatworthy)

    * ``bzr push`` to a ``bzr`` url (``bzr://``, ``bzr+ssh://`` etc) will
      stream if the server is version 1.13 or greater, reducing roundtrips
      significantly. (Andrew Bennetts, Robert Collins)

    * Lightweight Checkouts and Stacked Branches should both be much
      faster over remote connections. Building the working tree now
      batches up requests into approx 5MB requests, rather than a separate
      request for each file. (John Arbash Meinel)

    * Support for GSSAPI authentication when using HTTP or HTTPS. 
      (Jelmer Vernooij)
