@@ -21,6 +21,9 @@ IN DEVELOPMENT
       options to change the default tree-creation policy of shared
       repositories.  (Matthew Fuller, Marius Kruger, #145033)
 
+    * Debug flags can now be set in ``~/.bazaar/bazaar.conf``.
+      (Martin Pool)
+
     * Filtered views provide a mask over the tree so that users can focus
       on a subset of a tree when doing their work. See ``Filtered views``
       in chapter 7 of the User Guide and ``bzr help view`` for details.
